attempt to fix toaster positioning on mobile

--- a/src/components/Toaster/Toaster.css
+++ b/src/components/Toaster/Toaster.css
@@ -1,5 +1,7 @@
 .toaster {
     position: fixed;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
     top: 0;
     left: 0;
     right: 0;
